Fixed navigarion bar spacing

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
    height: 80px;
 }
 img.landscape { 
-    max-height: 320px;
+    max-height: max-content;
     width: max-content;
     border-radius: 10px;
     margin: 10px;
@@ -11,7 +11,7 @@ img.landscape {
 
 #photography img.landscape, #california img.landscape {
     width: max-content;
-    max-height: 320px;
+    max-height: max-content;
 }
 
 #illustration img.landscape, #restoration img.landscape {
@@ -37,7 +37,6 @@ body {
 
 .navigation {
     margin: 60px 10px 50px 50px;
-    max-width: 400px;
     padding-top: 15px;
 }
 .navigation ul {
@@ -106,7 +105,7 @@ a:hover {
         display: flex;
         justify-content: center;
         justify-content: space-between;
-        margin: 20px;
+        margin: 20px 40px 40px 40px;
     } 
     .navigation ul {
         display: none;
@@ -119,9 +118,8 @@ a:hover {
     cursor: pointer;
     width: 30px;
     height: 30px;
-    position: relative;
+    position:relative;
   }
-
   .hamburger-menu:before,
   .hamburger-menu:after {
     content: "";
